Bug 106042 - REGRESSION(r138729): crash and assertion failures in WebKit::WebProcess::plugInDidReceiveUserInteraction
Summary: REGRESSION(r138729): crash and assertion failures in WebKit::WebProcess::plug...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Plug-ins (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P1 Normal
Assignee: Jon Lee
URL:
Keywords: InRadar
: 106049 (view as bug list)
Depends on:
Blocks: 105973
  Show dependency treegraph
 
Reported: 2013-01-03 14:27 PST by Ryosuke Niwa
Modified: 2013-01-04 10:45 PST (History)
4 users (show)

See Also:


Attachments
Patch (3.38 KB, patch)
2013-01-03 15:54 PST, Jon Lee
beidson: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2013-01-03 14:27:37 PST
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r138729%20(4433)/results.html
http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r138729%20(5413)/results.html

fast/replaced/no-focus-ring-object.html
fast/replaced/no-focus-ring-embed.html
platform/mac-wk2/plugins/mouse-events-scaled-iframe.html
plugins/change-widget-and-click-crash.html
plugins/resize-from-plugin.html
Comment 1 Ryosuke Niwa 2013-01-03 14:31:20 PST
Added a test expectation in http://trac.webkit.org/changeset/138743.
Comment 2 Radar WebKit Bug Importer 2013-01-03 15:11:58 PST
<rdar://problem/12953469>
Comment 3 Jon Lee 2013-01-03 15:54:02 PST
Created attachment 181244 [details]
Patch
Comment 4 Jon Lee 2013-01-03 16:33:29 PST
Committed r138764: <http://trac.webkit.org/changeset/138764>
Comment 5 Csaba Osztrogonác 2013-01-04 10:45:49 PST
*** Bug 106049 has been marked as a duplicate of this bug. ***