third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginView.cpp
@@ -1610,6 +1610,9 @@ bool PluginView::shouldAlwaysAutoStart() const
 
 void PluginView::pluginDidReceiveUserInteraction()
 {
+    if (frame() && !frame()->settings()->plugInSnapshottingEnabled())
+        return;
+
     if (m_didReceiveUserInteraction)
         return;
 
